# Anabolix-Back

./: .gitignore  Cargo.toml
.github/workflows/: deploy_prod.yml
src/: app_state.rs  imports.rs  main.rs  register_routes.rs
src/config/: config.json  config_manager.rs  database.txt
src/routes/: location.rs  login.rs  mod.rs  posts.rs  register.rs
src/utils/: auth_struct.rs  generate_id.rs  ip_struct.rs  mod.rs  post_struct.rs
