[package]
name = "anabolix-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide-governor = "1.0.3"
http-types = "2.12.0"
tide-sqlx = "0.6.1"
sqlx = { version = "0.5.13", features = ["runtime-async-std-rustls", "postgres"] }
pwhash = "1"
jwt = "0.16.0"
time = "0.2.0"
hmac = "=0.12.1"
sha2 = "=0.10.8"
maxminddb = "0.23.0"
